# rustNeuralNetwork

./: Cargo.toml  EndOfAlg.webm  README.md  StartofAlg.webm  shell.nix
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
