[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.195", features = ["derive"]}
wasm-bindgen = {version = "0.2.89", features = ["serde-serialize"]}
rand = "0.8.5"
lib-simulation = {path = "../simulation"}
getrandom = {version = "0.2.11", features = ["js"]}

[lib]
crate-type = ["cdylib"]

